public/assets/scss/main.css
/* ... */
.pr-200 {
  padding-right: 200px;
}

.row {
  --bs-gutter-x: 30px;
}
.row.g-0 {
  --bs-gutter-x: 0;
}

@media (min-width: 1400px) {
  .container {
    max-width: 1400px;
    padding: 0 15px;
  }
  .container.style-2 {
    max-width: 1480px;
  }
}
.bg-default {
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
}

.bg-theme {
  background-color: var(--clr-theme-primary);
}

/**
* other generic css
*/
.ba-rating i {
  color: #ffc107;
  font-size: 15px;
  font-weight: 400;
}
.ba-rating i.active {
  font-weight: 700;
}

.white-text {
  color: var(--clr-common-white);
}

.soft-white-text {
  color: #f9f9f9;
}

blockquote {
  background: #ffffff;
  text-align: center;
  padding: 30px 40px;
  font-size: 18px;
}
@media (max-width: 767px) {
  blockquote {
    padding: 30px 30px;
  }
}

.pb-12 {
  padding-bottom: 12px;
}

.ba-mb-0 {
  margin-bottom: 0;
}

/*=================== 
02. Animation
******************************************************* 
*************************************************************** */
@-webkit-keyframes play-scale-up {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  100% {
    transform: scale(1.4);
    opacity: 0;
  }
}
@keyframes play-scale-up {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  100% {
    transform: scale(1.4);
    opacity: 0;
  }
}
/*=================== 
03. Button
******************************************************* 
*************************************************************** */
.ba-submit-btn {
  display: inline-block;
  border: 0;
  height: 50px;
  padding: 0 28px;
  border-radius: 4px;
  text-decoration: none;
  color: var(--clr-common-white);
  background-color: var(--clr-theme-primary);
  font-weight: 500;
  line-height: 48px;
}
.ba-submit-btn:hover {
  background-color: var(--clr-common-black);
  color: var(--clr-common-white);
}
.ba-submit-btn.hover-white:hover {
  background-color: var(--clr-common-white);
  color: var(--clr-theme-primary);
}
.ba-submit-btn.white-btn {
  color: var(--clr-theme-primary);
  background-color: var(--clr-common-white);
}
.ba-submit-btn.white-btn:hover {
  background-color: var(--clr-common-black);
  color: var(--clr-common-white);
}

/*=================== 
04. Header
******************************************************* 
*************************************************************** */
.ba-header-logo a {
  display: inline-block;
}
.ba-header-logo img {
  max-width: 135px;
}
.ba-header-top-area {
  padding-top: 12px;
  padding-bottom: 50px;
}
@media (max-width: 767px) {
  .ba-header-top-content {
    text-align: center;
  }
}
@media (max-width: 767px) {
  .ba-header-top-content .ba-header-top-list {
    padding-bottom: 5px;
  }
}
.ba-header-top-list {
  color: var(--clr-common-white);
  font-size: 14px;
  display: inline-block;
  text-decoration: none;
}
.ba-header-top-list i {
  margin-right: 5px;
}
.ba-header-top-list:hover {
  color: var(--clr-common-white);
}
.ba-header-top-right a {
  margin-left: 10px;
}
.ba-header-top-right a:first-child {
  margin-left: 0;
}
.ba-header-nav-inner {
  padding: 0 40px;
}
@media (max-width: 767px) {
  .ba-header-nav-inner {
    padding: 20px 20px;
  }
}
.ba-header-right-actions {
  display: inline-block;
}
.ba-header-nav-menu {
  display: inline-block;
}
.ba-header-nav-menu ul li {
  list-style: none;
  display: inline-block;
  position: relative;
}
.ba-header-nav-menu ul li .submenu {
  position: absolute;
  left: 0;
  top: 100%;
  text-align: left;
  background: var(--clr-common-white);
  transform-origin: top;
  min-width: 230px;
  transform: scaleY(0);
  padding: 25px 20px;
  transition: all 0.3s linear 0s;
  box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.1);
}
.ba-header-nav-menu ul li .submenu li {
  margin-left: 0;
  display: block;
}
.ba-header-nav-menu ul li .submenu li a {
  display: block;
  padding: 0 0;
}
.ba-header-nav-menu ul li .submenu li:not(:last-child) a {
  padding-bottom: 10px;
  border-bottom: 1px solid #ddd;
  margin-bottom: 15px;
}
.ba-header-nav-menu ul li:hover > .submenu {
  transform: scaleY(1);
}
.ba-header-nav-menu ul li:hover > a {
  color: var(--clr-theme-primary);
}
.ba-header-nav-menu ul li:not(:first-child) {
  margin-left: 50px;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .ba-header-nav-menu ul li:not(:first-child) {
    margin-left: 30px;
  }
}
.ba-header-nav-menu ul li a {
  color: #8a90a2;
  text-decoration: none;
  padding: 30px 0;
  display: inline-block;
}
.ba-header-nav-menu ul li.active a {
  color: var(--clr-theme-primary);
}
.ba-header-right-link {
  width: 40px;
  background: transparent;
  height: 40px;
  display: inline-block;
  border: 1px solid var(--clr-theme-primary);
  line-height: 36px;
  border-radius: 4px;
  position: relative;
  text-align: center;
  color: var(--clr-theme-primary);
}
.ba-header-right-link:hover {
  background-color: var(--clr-theme-primary);
  color: var(--clr-common-white);
}
.ba-header-right-link i {
  font-weight: 400;
}
.ba-header-right-link .count {
  width: 25px;
  height: 25px;
  display: inline-block;
  color: var(--clr-common-white);
  background-color: var(--clr-theme-primary);
  line-height: 25px;
  font-size: 15px;
  border-radius: 50%;
  position: absolute;
  right: -13px;
  top: -13px;
}
.ba-header-nav-inner {
  background: #fff;
  border-radius: 4px;
  position: relative;
  z-index: 9;
  margin-top: -43px;
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .ba-header-nav-inner {
    padding: 20px 20px;
  }
}
.ba-header-right-actions .ba-header-right-link {
  margin-left: 5px;
  height: 50px;
  width: 50px;
  line-height: 48px;
}

.ba-search-popup .ba-color-layer {
  position: fixed;
  content: "";
  left: 0;
  top: 0;
  height: 100vh;
  width: 100%;
  z-index: 999;
  background-color: rgba(0, 0, 0, 0.9);
  transition: all 1500ms cubic-bezier(0.86, 0, 0.07, 1);
  transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
}
/* ... */

